fixed spacing on horizontal mobile pg3

--- a/style.css
+++ b/style.css
@@ -1564,12 +1564,7 @@
     }
 
     .services-logo-container {
-        padding-top: 5%;
-        padding-bottom: 15%;
-        float: left;
-        position: absolute;
-        padding-left: 8%;
-        padding-right: 8%;
+        padding: 5% 0 15% 18%;
     }
 
     div.services-logo-container img {
@@ -1580,10 +1575,9 @@
 
     #logo-caption-container {
         background-color: #faf8e8bd;
-        position: absolute;
-        margin: 55vh 5vh 0 5vh;
         padding: 3%;
         border-width: 5px;
+        width: 100%;
         font-family: sans-serif;
         font-size: 19px;
         text-align: center;
